--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip install numpy
-pip install pandas
-pip install nltk
-pip install sklearn
+py -m pip install pip install numpy
+py -m pip install pip install pandas
+py -m pip install pip install nltk
+py -m pip install pip install sklearn
