--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-py -m pip install pip install numpy
-py -m pip install pip install pandas
-py -m pip install pip install nltk
-py -m pip install pip install sklearn
+nltk==3.5
+scikit-learn==0.22.1
+matplotlib==3.2.2
+numpy==1.18.1
+pandas==1.0.5
+streamlit==0.62.0
+Werkzeug==1.0.1
